crates/ars-components/src/utility/form_submit/snapshots/ars_components__utility__form_submit__tests__form_submit_root_validation_failed.snap
---
source: crates/ars-components/src/utility/form_submit.rs
assertion_line: 1007
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form-submit",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "validation-failed",
            ),
        ),
        (
            Id,
            String(
                "test-form",
            ),
        ),
    ],
    styles: [],
}
